manifests/garage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage
  template:
    metadata:
      labels:
        app: garage
    spec:
      containers:
        - name: garage
          image: dxflrs/garage:v2.3.0
          ports:
            - name: s3-api
              containerPort: 3900
              protocol: TCP
            - name: rpc
              containerPort: 3901
              protocol: TCP
            - name: web
              containerPort: 3902
              protocol: TCP
            - name: admin
              containerPort: 3903
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/garage.toml
              subPath: garage.toml
        - name: garage-webui
          image: khairul169/garage-webui:latest
          ports:
            - name: s3-api
              containerPort: 3900
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/garage.toml
              subPath: garage.toml
      volumes:
        - name: config
          secret:
            secretName: garage
