manifests/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-s3
spec:
  type: ClusterIP
  selector:
    app: garage
  ports:
    - name: vless
      port: 3900
      targetPort: 3900
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: garage-web
spec:
  type: ClusterIP
  selector:
    app: garage
  ports:
    - name: vless
      port: 3902
      targetPort: 3902
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: garage-admin
spec:
  type: ClusterIP
  selector:
    app: garage
  ports:
    - name: vless
      port: 3903
      targetPort: 3903
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
spec:
  type: ClusterIP
  selector:
    app: garage
  ports:
    - name: garage-webui
      port: 3909
      targetPort: 3909
      protocol: TCP
