manifests/garage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-webui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: s3.jmly.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-webui
                port:
                  number: 3909
